@@ -2,10 +2,6 @@
 <!-- $Id$ -->
 <configuration>
  <configtab name="user" desc="User Capabilities and Constraints">
-  <configsection name="user">
-   <configboolean name="autocreate_special" required="false"
-    desc="Automatically create special mailboxes (Drafts, Sent Mail, Spam,
-    Trash) on login?">false</configboolean>
    <configboolean name="allow_view_source" desc="If true, a user will be
    allowed to view the raw source of a message.">true</configboolean>
   </configsection>
