@@ -2,6 +2,7 @@
 v6.1.0-git
 ----------
 
+[mms] Move special mailboxes autocreation configuration into backends.php.
 [mms] Move folder disabling configuration into backends.php.
 [mms] Add SMTP debugging.
 [mms] Disable mailbox sorting by default if the remote server does not natively
